# CUDA-Based-Deep-Learning-Framework-Mini-PyTorch-

./: .gitignore  CMakeLists.txt  README.md
autograd/: autograd.cpp  autograd.h
benchmarks/: benchmark.cpp
cuda/: cuda_kernels.cu  cuda_utils.h
datasets/: mnist.cpp  mnist.h
examples/: mnist_train.cpp
include/minidl/: framework.h
nn/: modules.cpp  modules.h
optim/: optim.cpp  optim.h
tensor/: tensor.cpp  tensor.h
tests/: test_main.cpp
